bugfix: small visual fix

--- a/templates/default/netdev/netdevlist.html
+++ b/templates/default/netdev/netdevlist.html
@@ -146,7 +146,7 @@
 				{/if}
 			{/if}
 			{if $netdev.ownerid}
-			<br>{button type="link" icon="customer" label=$netdev.customername href="?m=customerinfo&id={$netdev.ownerid}"}
+				<div>{button type="link" icon="customer" label=$netdev.customername href="?m=customerinfo&id={$netdev.ownerid}"}</div>
 			{/if}
 		</TD>
 		<TD class="nobr valign-top">
