bugfix: fixed php warnings

--- a/templates/default/customer/customerassignmenthelper.html
+++ b/templates/default/customer/customerassignmenthelper.html
@@ -632,7 +632,7 @@
 									{trans("Product ID:")}
 								</TD>
 								<TD>
-									<INPUT type="text" name="{$variable_prefix}[prodid]" value="{$variables.prodid|escape}"
+									<INPUT type="text" name="{$variable_prefix}[prodid]" value="{$variables.prodid|default:""|escape}"
 										size="10" {tip text="Enter liability Product ID (tariffless liabilities only)"}>
 								</TD>
 							</TR>
