--- a/templates/default/jquery.html
+++ b/templates/default/jquery.html
@@ -39,7 +39,7 @@
         zipCodeBackend: '{ConfigHelper::getConfig('phpui.zipcode_backend', 'osm')}',
         multiSelectPopupOnBottom: {if ConfigHelper::checkValue(ConfigHelper::getConfig('phpui.multiselect_popup_on_bottom', 'true'))}true{else}false{/if},
 		multiSelectMaxVisible: '{intval(ConfigHelper::getConfig('phpui.multiselect_max_visible', 5))}',
-        eventTimeStep: {ConfigHelper::getConfig('phpui.event_time_step', 30)},
+        eventTimeStep: {ConfigHelper::getConfig('timetable.event_time_step', ConfigHelper::getConfig('phpui.event_time_step', 30))},
 		openCalendarOnInputClick: {if ConfigHelper::checkConfig('phpui.open_calendar_on_input_click')}true{else}false{/if},
 		uploadedImageMaxSize: {intval(ConfigHelper::getConfig('phpui.uploaded_image_max_size', 0))},
 		monthlyPeriod: {$smarty.const.MONTHLY},
