--- a/templates/default/customer/customerinfo.html
+++ b/templates/default/customer/customerinfo.html
@@ -45,7 +45,7 @@
 	{include file="customer/customermessages.html" limit=10}
 {/block}
 {block name="customerevents"}
-	{include file="customer/customerevents.html" limit=ConfigHelper::getConfig('phpui.customer_event_limit', 10)}
+	{include file="customer/customerevents.html" limit=ConfigHelper::getConfig('timetable.customer_event_limit', ConfigHelper::getConfig('phpui.customer_event_limit', 10))}
 {/block}
 {block name="customertickets"}
 	{include file="customer/customertickets.html"}
