--- a/templates/default/rt/rtprinttickets-ext.html
+++ b/templates/default/rt/rtprinttickets-ext.html
@@ -68,7 +68,8 @@
 		</TD>
 		<TD WIDTH="1%" ALIGN="RIGHT" NOWRAP>
 			LMS {$layout.lmsv} @ {$layout.hostname}<BR>
-			{$smarty.now|date_format:"l, Y-m-d"}<BR>
+			{t a=trans($smarty.now|date_format:"l") b=$smarty.now|date_format:"Y-m-d"}<!date-format>$a, $b{/t}
+			<br>
 			{t a=$layout.logname}Prepared by: $a{/t}
 		</TD>
 	</TR>
