--- a/templates/default/rt/rtticketmodify.html
+++ b/templates/default/rt/rtticketmodify.html
@@ -156,7 +156,7 @@
 {/if}
 
 			{box_row icon="categories" label="Categories" class="categories" icon_class="fa-fw"}
-				{if ConfigHelper::checkConfig('phpui.helpdesk_allow_empty_categories')}
+				{if ConfigHelper::checkValue(ConfigHelper::getConfig('rt.allow_empty_categories', ConfigHelper::getConfig('phpui.helpdesk_allow_empty_categories', 'false')))}
 				<input type="hidden" name="ticket[categorywarn]" value="{$ticket.categorywarn}">
 				{/if}
 				{include file="rt/rtcategoryselection.html" categories=$categories name_prefix="ticket[categories]"}
