--- a/templates/default/rt/rtticketedit.html
+++ b/templates/default/rt/rtticketedit.html
@@ -15,7 +15,7 @@
 	$(function() {
 		$('[name="ticket[subject]"]').focus();
 
-		{$category_adjustments=ConfigHelper::checkConfig('phpui.category_adjustments_in_ticketedit')}
+		{$category_adjustments = ConfigHelper::checkValue(ConfigHelper::getConfig('rt.category_adjustments_in_ticketedit', ConfigHelper::getConfig('phpui.category_adjustments_in_ticketedit', 'false')))}
 		{if $category_adjustments}
 		$('[name="ticket[queueid]"]').change(function() {
 			xajax_GetCategories($(this).val());
