--- a/templates/default/document/documentgen.html
+++ b/templates/default/document/documentgen.html
@@ -135,7 +135,7 @@
 				<strong>{trans("Period:")}</strong>
 			</td>
 			<td>
-				{$allow_past_date = ConfigHelper::checkValue(ConfigHelper::getConfig('documents.allow_past_date', 'true'))}
+				{$allow_past_date = ConfigHelper::checkConfig('documents.allow_past_date', true)}
 				{trans("from:")}
 				<input type="text" name="document[fromdate]" value="{if $document.fromdate}{$document.fromdate}{/if}"
 					placeholder="{trans("yyyy/mm/dd")}"
