--- a/templates/default/node/nodeaddbox.html
+++ b/templates/default/node/nodeaddbox.html
@@ -92,7 +92,7 @@
 																{if $net.disabled == 1} class="lms-ui-alert"{/if}>{$net.name|truncate:20:"":true}: {$net.address}/{$net.prefix}</option>
 													{/foreach}
 												</select>
-												{if (ConfigHelper::checkConfig('phpui.show_assigned_networks_only')) && ConfigHelper::checkValue(ConfigHelper::checkConfig('phpui.public_ip', 'true'))}
+												{if ConfigHelper::checkConfig('phpui.show_assigned_networks_only') && ConfigHelper::checkConfig('phpui.public_ip', true)}
 													<script>
 
 														$('[name="nodedata[netid]"]').change(function() {
@@ -135,7 +135,7 @@
 										</td>
 									</tr>
 
-									{if ConfigHelper::checkValue(ConfigHelper::checkConfig('phpui.public_ip', 'true'))}
+									{if ConfigHelper::checkConfig('phpui.public_ip', true)}
 										<tr>
 											<td>
 												{icon name="routed"}
