--- a/templates/default/rt/rtmessageadd.html
+++ b/templates/default/rt/rtmessageadd.html
@@ -5,8 +5,8 @@
 {$xajax}
 
 {$group_action=is_array($message.ticketid)}
-{$hide_disabled_users = ConfigHelper::checkValue(ConfigHelper::getConfig('rt.hide_disabled_users', ConfigHelper::getConfig('phpui.helpdesk_hide_disabled_users', 'false')))}
-{$hide_deleted_users = ConfigHelper::checkValue(ConfigHelper::getConfig('rt.hide_deleted_users', ConfigHelper::getConfig('phpui.helpdesk_hide_deleted_users', 'false')))}
+{$hide_disabled_users = ConfigHelper::checkConfig('rt.hide_disabled_users', ConfigHelper::checkConfig('phpui.helpdesk_hide_disabled_users'))}
+{$hide_deleted_users = ConfigHelper::checkConfig('rt.hide_deleted_users', ConfigHelper::checkConfig('phpui.helpdesk_hide_deleted_users'))}
 
 <style>
 
@@ -290,7 +290,7 @@
 
 			{box_row icon="deadline" icon_class="fa-fw" label="<!rt>Deadline"}
 				{if $group_action
-					|| ConfigHelper::checkValue(ConfigHelper::getConfig('rt.allow_all_users_modify_deadline', ConfigHelper::getConfig('phpui.helpdesk_allow_all_users_modify_deadline', 'false')))
+					|| ConfigHelper::checkConfig('rt.allow_all_users_modify_deadline', ConfigHelper::checkConfig('phpui.helpdesk_allow_all_users_modify_deadline'))
 					|| !$ticket.verifierid || $ticket.verifierid == $layout.logid}
 					<INPUT TYPE="TEXT" NAME="message[deadline]" VALUE="{if $message.deadline}{$message.deadline|date_format:"Y/m/d H:i"}{/if}"
 							SIZE="20" {tip text="Enter deadline in YYYY/MM/DD HH:MM format or click to select it from applet" class="lms-ui-datetime" trigger="deadline"}>
