--- a/templates/default/rt/rtticketmodify.html
+++ b/templates/default/rt/rtticketmodify.html
@@ -1,5 +1,5 @@
-{$hide_disabled_users = ConfigHelper::checkValue(ConfigHelper::getConfig('rt.hide_disabled_users', ConfigHelper::getConfig('phpui.helpdesk_hide_disabled_users', 'false')))}
-{$hide_deleted_users = ConfigHelper::checkValue(ConfigHelper::getConfig('rt.hide_deleted_users', ConfigHelper::getConfig('phpui.helpdesk_hide_deleted_users', 'false')))}
+{$hide_disabled_users = ConfigHelper::checkConfig('rt.hide_disabled_users', ConfigHelper::checkConfig('phpui.helpdesk_hide_disabled_users'))}
+{$hide_deleted_users = ConfigHelper::checkConfig('rt.hide_deleted_users', ConfigHelper::checkConfig('phpui.helpdesk_hide_deleted_users'))}
 
 <style>
 
@@ -156,7 +156,7 @@
 {/if}
 
 			{box_row icon="categories" label="Categories" class="categories" icon_class="fa-fw"}
-				{if ConfigHelper::checkValue(ConfigHelper::getConfig('rt.allow_empty_categories', ConfigHelper::getConfig('phpui.helpdesk_allow_empty_categories', 'false')))}
+				{if ConfigHelper::checkConfig('rt.allow_empty_categories', ConfigHelper::checkConfig('phpui.helpdesk_allow_empty_categories'))}
 				<input type="hidden" name="ticket[categorywarn]" value="{$ticket.categorywarn}">
 				{/if}
 				{include file="rt/rtcategoryselection.html" categories=$categories name_prefix="ticket[categories]"}
@@ -220,7 +220,7 @@
 
 			{box_row icon="deadline" label="<!rt>Deadline" icon_class="fa-fw"}
 				{if $layout.module != 'rtticketedit'
-					|| ConfigHelper::checkValue(ConfigHelper::getConfig('rt.allow_all_users_modify_deadline', ConfigHelper::getConfig('phpui.helpdesk_allow_all_users_modify_deadline', 'false')))
+					|| ConfigHelper::checkConfig('rt.allow_all_users_modify_deadline', ConfigHelper::checkConfig('phpui.helpdesk_allow_all_users_modify_deadline'))
 					|| !$ticket.oldverifierid || $ticket.oldverifierid == $layout.logid}
 					<input type="text" name="ticket[deadline]" value="{if $ticket.deadline}{$ticket.deadline|date_format:"Y/m/d H:i"}{/if}" size="20"
 						{tip text="Enter deadline in YYYY/MM/DD HH:MM format or click to select it from applet" class="lms-ui-datetime" trigger="deadline"}>
