--- a/templates/default/event/eventinfo.html
+++ b/templates/default/event/eventinfo.html
@@ -308,7 +308,10 @@
 				{else}
 					{button type="link-button" href="?m=eventedit&id={$event.id}&action=open" icon="open" label="Open"}
 				{/if}
-				{if !$event.closed || ($event.closed && ConfigHelper::getConfig('phpui.allow_modify_closed_events_newer_than', 604800) && ($smarty.now - $event.closeddate < ConfigHelper::getConfig('phpui.allow_modify_closed_events_newer_than', 604800)))|| ConfigHelper::checkPrivilege('superuser')}
+				{if !$event.closed
+					|| ($event.closed && ConfigHelper::getConfig('timetable.allow_modify_closed_events_newer_than', ConfigHelper::getConfig('phpui.allow_modify_closed_events_newer_than', 604800))
+						&& ($smarty.now - $event.closeddate < ConfigHelper::getConfig('timetable.allow_modify_closed_events_newer_than', ConfigHelper::getConfig('phpui.allow_modify_closed_events_newer_than', 604800))))
+					|| ConfigHelper::checkPrivilege('superuser')}
 					{button type="link-button" href="?m=eventedit&id={$event.id}" icon="edit" label="Edit"}
 					{button type="link-button" href="?m=eventdel&id={$event.id}" icon="delete" label="Delete" class="delete-event"}
 				{/if}
