--- a/templates/default/event/eventlistboxrow.html
+++ b/templates/default/event/eventlistboxrow.html
@@ -2,7 +2,7 @@
 <TR class="highlight event-single{if $event.closed} blend{/if}{if $event.wholeday} event-whole-day{/if}{if $event.multiday} event-multi-day{/if}"
     data-event-id="{$event.id}"
     data-popup-menu-title="{t a=$event.id|string_format:"#%06d"}Event $a{/t}">
-	<td style="min-width: 90px; {if isset($_EVENTSTYLES[$event.type])} {$_EVENTSTYLES[$event.type]}{/if}" class="text-center bold {if !$event.closed || ($event.closed && ($smarty.now - $event.closeddate < ConfigHelper::getConfig('phpui.allow_modify_closed_events_newer_than', 604800))) || ConfigHelper::checkPrivilege('superuser')}event-single-sortable-handler{/if}">
+	<td style="min-width: 90px; {if isset($_EVENTSTYLES[$event.type])} {$_EVENTSTYLES[$event.type]}{/if}" class="text-center bold {if !$event.closed || ($event.closed && ($smarty.now - $event.closeddate < ConfigHelper::getConfig('timetable.allow_modify_closed_events_newer_than', ConfigHelper::getConfig('phpui.allow_modify_closed_events_newer_than', 604800)))) || ConfigHelper::checkPrivilege('superuser')}event-single-sortable-handler{/if}">
         {$_EVENTTYPES[$event.type]}
             {if $_EVENTTYPES[$event.type]}
             <br>
@@ -99,7 +99,7 @@
                 {if ConfigHelper::checkPrivilege('timetable_management')}
                     {button type="link" icon="clone" href="?m=eventadd&id={$event.id}" tip="Clone"}
                     {if ($event.closed)}
-                        {$allow_modify = intval(ConfigHelper::getConfig('phpui.allow_modify_closed_events_newer_than', 604800))}
+                        {$allow_modify = intval(ConfigHelper::getConfig('timetable.allow_modify_closed_events_newer_than', ConfigHelper::getConfig('phpui.allow_modify_closed_events_newer_than', 604800)))}
                         {if !$allow_modify || ($smarty.now - $event.closeddate < $allow_modify) || ConfigHelper::checkPrivilege('superuser')}
                             {button type="link" icon="open" href="?m=eventedit&id={$event.id}&action=open{if isset($backid)}&backid={$backid}{/if}" tip="Open"}
                         {/if}
