bugfix: fixed php deprecated warning

--- a/templates/default/customer/customercalllist.html
+++ b/templates/default/customer/customercalllist.html
@@ -236,7 +236,7 @@
 										{/if}
 									</span>
 									<span class="customer-call-view customer-call-note-more"
-										{if mb_strlen($call.notes) <= 50} style="display: none;"{/if}>
+										{if $call.notes && mb_strlen($call.notes) <= 50} style="display: none;"{/if}>
 										{hint mode="toggle" icon="view" class="customer-call-note-hint" text=nl2br($call.notes)}
 									</span>
 									<span class="customer-call-edit" style="display: none;">
