--- a/templates/default/customer/customercalllist.html
+++ b/templates/default/customer/customercalllist.html
@@ -237,12 +237,12 @@
 									</span>
 									<span class="customer-call-view customer-call-note-more"
 										{if $call.notes && mb_strlen($call.notes) <= 50} style="display: none;"{/if}>
-										{hint mode="toggle" icon="view" class="customer-call-note-hint" text=nl2br($call.notes)}
+										{hint mode="toggle" icon="view" class="customer-call-note-hint" text=$call.notes|default:""|@nl2br}
 									</span>
 									<span class="customer-call-edit" style="display: none;">
 										<textarea type="text" class="customer-call-note lms-ui-autogrow"
 											data-original-value="{$call.notes|escape}"
-											>{$call.notes|escape}</textarea>
+											>{$call.notes|default:""|escape}</textarea>
 									</span>
 								</td>
 								<td class="buttons nobr">
