cleanup: we don't need colons in box titles

--- a/templates/default/welcome/welcome_links.html
+++ b/templates/default/welcome/welcome_links.html
@@ -3,7 +3,7 @@
     <thead>
         <tr onclick="showOrHide('welcome_links-{$layout.module}');">
             <td class="text-center bold">
-                <i class="lms-ui-icon-link"></i> {trans("Useful Links:")}
+                <i class="lms-ui-icon-link"></i> {trans("Useful Links")}
             </td>
         </tr>
     </thead>
