--- a/templates/default/welcome/welcome_summaries.html
+++ b/templates/default/welcome/welcome_summaries.html
@@ -7,7 +7,7 @@
     <thead>
         <tr>
             <td colspan="2" class="text-center bold">
-                <i class="lms-ui-icon-node"></i> {trans("Nodes:")}
+                <i class="lms-ui-icon-node"></i> {trans("Nodes")}
             </td>
         </tr>
     </thead>
