--- a/templates/default/welcome/welcome_sysinfo_about_lms.html
+++ b/templates/default/welcome/welcome_sysinfo_about_lms.html
@@ -7,7 +7,7 @@
     <thead >
         <tr onclick="showOrHide('welcome_sysinfo_about_lms-{$layout.module}');">
             <td class="text-center bold nobr" colspan="2">
-                <img src="img/logo-ico.png" alt=""> {t a=LMS::SOFTWARE_NAME}About $a:{/t}
+                <img src="img/logo-ico.png" alt=""> {t a=LMS::SOFTWARE_NAME}About $a{/t}
             </td>
         </tr>
     </thead>
