--- a/templates/default/welcome/welcome_sysinfo_about_system.html
+++ b/templates/default/welcome/welcome_sysinfo_about_system.html
@@ -7,7 +7,7 @@
     <thead>
         <tr onclick="showOrHide('welcome_sysinfo_about_system-{$layout.module}');">
             <td class="text-center bold nobr" colspan="2">
-                <i class="lms-ui-icon-optional-info"></i> {trans("About system:")}
+                <i class="lms-ui-icon-optional-info"></i> {trans("About system")}
             </td>
         </tr>
     </thead>
