bugfix: fixed php deprecated warnings

--- a/templates/default/netnode/netnodelist.html
+++ b/templates/default/netnode/netnodelist.html
@@ -100,8 +100,7 @@
 	{/if}
     </THEAD>
     <TBODY>
-	{$nlist2 = array_slice($nlist, $start, $pagelimit)}
-	{foreach $nlist2 as $item}
+	{foreach $nlist as $item}
 	<TR class="highlight" data-target-url="?m=netnodeinfo&id={$item.id}" data-name="{$item.name}">
 		<TD class="valign-top">
 			<IMG src="img/netnode.png" ALT=""> <a name="{$item.id}"><span class="bold">{$item.name}</span></A><BR>
