--- a/userpanel/modules/documents/templates/setup.html
+++ b/userpanel/modules/documents/templates/setup.html
@@ -172,7 +172,7 @@
 										<tr>
 											<td class="nobr">
 												<label for="new_document_customer_notification_mail_subject">
-													{trans("Mail subject:")}
+													{trans("Mail subject")}
 												</label>
 											</td>
 											<td>
@@ -189,7 +189,7 @@
 										<tr>
 											<td class="nobr">
 												<label for="new_document_customer_notification_mail_body">
-													{trans("Mail body:")}
+													{trans("Mail body")}
 												</label>
 											</td>
 											<td>
@@ -249,7 +249,7 @@
 										<tr>
 											<td class="nobr">
 												<label for="signed_document_scan_operator_notification_mail_recipient">
-													{trans("Mail recipient:")}
+													{trans("Recipient e-mail addresses")}
 												</label>
 											</td>
 											<td>
@@ -264,7 +264,7 @@
 										<tr>
 											<td class="nobr">
 												<label for="signed_document_scan_operator_notification_mail_subject">
-													{trans("Mail subject:")}
+													{trans("Mail subject")}
 												</label>
 											</td>
 											<td>
@@ -281,7 +281,7 @@
 										<tr>
 											<td class="nobr">
 												<label for="signed_document_scan_operator_notification_mail_body">
-													{trans("Mail body:")}
+													{trans("Mail body")}
 												</label>
 											</td>
 											<td>
@@ -311,7 +311,7 @@
 										<tr>
 											<td class="nobr">
 												<label for="signed_document_scan_customer_notification_mail_subject">
-													{trans("Mail subject:")}
+													{trans("Mail subject")}
 												</label>
 											</td>
 											<td>
@@ -328,7 +328,7 @@
 										<tr>
 											<td class="nobr">
 												<label for="signed_document_scan_customer_notification_mail_body">
-													{trans("Mail body:")}
+													{trans("Mail body")}
 												</label>
 											</td>
 											<td>
@@ -358,7 +358,7 @@
 										<tr>
 											<td class="nobr">
 												<label for="document_approval_operator_notification_mail_recipient">
-													{trans("Recipient e-mail address")}
+													{trans("Recipient e-mail addresses")}
 												</label>
 											</td>
 											<td>
@@ -420,7 +420,7 @@
 										<tr>
 											<td class="nobr">
 												<label for="document_approval_customer_notification_mail_subject">
-													{trans("Mail subject:")}
+													{trans("Mail subject")}
 												</label>
 											</td>
 											<td>
@@ -437,7 +437,7 @@
 										<tr>
 											<td class="nobr">
 												<label for="document_approval_customer_notification_mail_body">
-													{trans("Mail body:")}
+													{trans("Mail body")}
 												</label>
 											</td>
 											<td>
