--- a/templates/default/welcome/welcome_links.html
+++ b/templates/default/welcome/welcome_links.html
@@ -13,7 +13,7 @@
                 <a href="{LMS::SOFTWARE_URL}" rel="external">{trans("LMS Project Homepage")}</a><br>
                 <a href="{$_dochref}" rel="external">{trans("Online Documentation")}</a><br>
                 <a href="doc/ChangeLog" rel="external">{trans("ChangeLog")}</a><br>
-                <a href="https://lists.lms.org.pl" rel="external">{trans("Mailing Lists archive")}</a><br>
+                <a href="https://lists.lms.org.pl" rel="external">{trans("Mailing List Archive")}</a><br>
                 <a href="http://git.lms.org.pl" rel="external">{trans("GIT Repository")}</a><br>
                 <a href="http://bts.lms.org.pl" rel="external">{trans("Bug Tracking System")}</a>
             </td>
