improvement: make repo and support url easily configurable in source code

--- a/templates/default/welcome/welcome_links.html
+++ b/templates/default/welcome/welcome_links.html
@@ -14,8 +14,8 @@
                 <a href="{$_dochref}" rel="external">{trans("Online Documentation")}</a><br>
                 <a href="doc/ChangeLog" rel="external">{trans("ChangeLog")}</a><br>
                 <a href="https://lists.lms.org.pl" rel="external">{trans("Mailing List Archive")}</a><br>
-                <a href="http://git.lms.org.pl" rel="external">{trans("GIT Repository")}</a><br>
-                <a href="http://bts.lms.org.pl" rel="external">{trans("Bug Tracking System")}</a>
+                <a href="{LMS::SOFTWARE_REPO_URL}" rel="external">{trans("GIT Repository")}</a><br>
+                <a href="{LMS::SOFTWARE_SUPPORT_URL}" rel="external">{trans("Bug Tracking System")}</a>
             </td>
         </tr>
     </tbody>
