enhancement: added 'deleted tickets' filter in rtqueuelist module (LMS+ fixes #2132)

--- a/templates/default/rt/rtqueuelist.html
+++ b/templates/default/rt/rtqueuelist.html
@@ -3,6 +3,13 @@
 {block name=module_content}
 <!-- $Id$ -->
 <H1>{$layout.pagetitle}</H1>
+
+<form method="POST" action="?m=rtqueuelist" id="filter" name="filter">
+	<input type="hidden" name="m" value="rtqueuelist">
+	<input type="hidden" name="deleted" value="0">
+	<input type="hidden" name="deleted_tickets" value="0">
+</form>
+
 <TABLE class="lmsbox lms-ui-background-cycle">
 	<COLGROUP>
 			<COL style="width: 1%;">
@@ -56,15 +63,17 @@
 		<TD colspan="10">
 			<div class="lms-ui-filter-container">
 				<div class="lms-ui-filter-definition">
-					<FORM method="POST" action="?m=rtqueuelist" name="filter">
-						<input type="hidden" name="m" value="rtqueuelist">
-						<span class="bold">{trans("Filter:")}</span>
-						<label class="nobr">
-							{trans("Show deleted")}
-							<input type="hidden" name="deleted" value="0">
-							<input type="checkbox" name="deleted" value="1" onChange="document.filter.submit();"{if $filter.deleted == 1} checked{/if}>
-						</label>
-					</FORM>
+					<strong>{trans("Filter")}</strong>
+					<label class="nobr">
+						{trans("deleted queues")}
+						<input type="checkbox" name="deleted" value="1" form="filter"
+							onChange="document.filter.submit();"{if $filter.deleted == 1} checked{/if}>
+					</label>
+					<label class="nobr">
+						{trans("deleted tickets")}
+						<input type="checkbox" name="deleted_tickets" value="1" form="filter"
+							onChange="document.filter.submit();"{if $filter.deleted_tickets == 1} checked{/if}>
+					</label>
 				</div>
 				{persistent_filter}
 			</div>
