--- a/templates/default/customer/customerlist.html
+++ b/templates/default/customer/customerlist.html
@@ -212,7 +212,7 @@
 					<input type="hidden" name="ng" value="all">
 					<select size="1" name="ng[]" onchange="document.choosefilter.submit();"
 							class="lms-ui-multiselect lms-ui-multiselect-filter" multiple>
-						<option value=""{if !is_array($filter.nodegroup) && !$filter.nodegroup} selected{/if}
+						<option value=""{if is_array($filter.nodegroup) && empty($filter.nodegroup) || !is_array($filter.nodegroup) && !$filter.nodegroup} selected{/if}
 							data-exclusive>{trans("- all groups -")}</option>
 						{foreach $nodegroups as $nodegroup}
 							<option value="{$nodegroup.id}"
